# omniroom2-server

./: .gitignore  Cargo.toml
src/: broadcast.rs  main.rs
static/: index.html  script.js  services.js  style.css
