[package]
name = "omniroom-server"
version = "0.1.0"
authors = ["Nabos <nabos@glargh.fr>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.152", features = ["derive"] }
#rocket = { version = "0.5.0-rc.1", features = ["secrets", "json", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
broadcaster = "1.0.0"
actix-web = "4.3.0"
actix-web-lab = "0.18.9"
futures-util = "0.3.26"
parking_lot = "0.12.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
bincode = "1.3.3"
serde_json = "1.0.93"
actix-files = "0.6.2"
